--- a/contact.html
+++ b/contact.html
@@ -25,5 +25,17 @@
       placeat officiis odit consequatur, a nostrum, dolores ipsum nesciunt
       eligendi!
     </p>
+        <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      nobis, suscipit voluptate expedita facilis officiis incidunt aut nesciunt
+      enim dignissimos, eaque dolore iusto non velit magni eius neque modi.
+      Cumque.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptas
+      culpa facilis sit cum laboriosam quis voluptatem accusantium labore, quo
+      placeat officiis odit consequatur, a nostrum, dolores ipsum nesciunt
+      eligendi!
+    </p>
   </body>
 </html>
